=== CHANGES: ameritrade ===

2018-10-13

  - Fixed API for recent changes, just renaming add_script_args to add_args.


2018-10-04

  - Added separate 'read_cache' and 'write_cache' options, for more control
    during development. Also added corresponding command-line options.

  - Ported all the code to a single open() call, with multiple configuration
    creation calls.

  - Created check.py, a module that just prints and tests the config.


2018-09-28

  - Pull the client id from the '$AMERITRADE_DIR/config/client_id' file instead
    of having to be brought it.

  - Changed the environment variables to a single variable 'AMERITRADE_DIR'
    which contains both the cache and the configuration directory.

  - Added lazy option to the API in order to take full advantage of the cache
    while developing, and not even having to reconnect if everything requested
    has been cached.


2018-09-24

  - Added function to build a CUSIP given an Option.


2018-09-13

  - Added input schema validation for POST methods. The argument is called
    'payload' and is directly validated against the schemas provided by the API
    documentation.

  - Implemented POST method.

  - Implemented debug option in configuration.

  - Implemented automatic support for reusing the refresh token. This
    significantly extends the duration of valid login credentials.

  - Added a function to convert from an Option object to an Ameritrade option symbol.


2018-09-03

  - Added options symbol parsing support.


2018-08-30

  - Fixed bug with passing in kw args with value None, which should always be
    ignored.


2018-08-27

  - Added minimal example client program.


2018-08-24

  - Added early check for existence of key/certificate files.

  - Added example script to cancel all orders and implemented DELETE method.

  - Added readonly to scriptgs.open_with_dirs() function.

  - Added example script calculating various probability estimates.
